Add frontend and backend updates