@@ -2,19 +2,17 @@ package com.hrms.hr_payroll_management_system.config;
 
 import com.hrms.hr_payroll_management_system.security.CustomAccessDeniedHandler;
 import com.hrms.hr_payroll_management_system.security.CustomAuthenticationEntryPoint;
+import com.hrms.hr_payroll_management_system.security.CustomOAuth2UserService;
 import com.hrms.hr_payroll_management_system.security.CustomUserDetailsService;
 import com.hrms.hr_payroll_management_system.security.JwtAuthenticationFilter;
+import com.hrms.hr_payroll_management_system.security.OAuth2LoginSuccessHandler;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpMethod;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -26,23 +24,40 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
+import java.util.List;
+
 @Configuration
 @EnableMethodSecurity
 @RequiredArgsConstructor
-public class SecurityConfig{
+public class SecurityConfig {
 
     private final CustomUserDetailsService customUserDetailsService;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final CustomAuthenticationEntryPoint authenticationEntryPoint;
     private final CustomAccessDeniedHandler accessDeniedHandler;
+    private final CustomOAuth2UserService customOAuth2UserService;
+
+    // OAuth2 Success Handler
+    private final OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler;
+
+    // ✅ NEW: read allowed origins from application.yml instead of hardcoding
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
 
     @Bean
     public SecurityFilterChain securityFilterChain(
             HttpSecurity http
     ) throws Exception {
 
-                http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        http
+                .cors(cors -> cors
+                        .configurationSource(corsConfigurationSource())
+                )
 
                 .csrf(csrf -> csrf.disable())
 
@@ -58,31 +73,47 @@ public class SecurityConfig{
                 )
 
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        .requestMatchers(HttpMethod.OPTIONS, "/**")
+                        .permitAll()
 
                         .requestMatchers(
-                        "/api/v1/auth/register",
-                        "/api/v1/auth/login",
-                        "/api/v1/auth/refresh-token",
-                        "/api/v1/auth/forgot-password",
-                        "/api/v1/auth/reset-password",
-                        "/api/v1/auth/verify-email",
-                        "/api/v1/auth/resend-verification",
-                        "/swagger-ui/**",
-                        "/swagger-ui.html",
-                        "/v3/api-docs/**",
-                        "/",
-                        "/css/**",
-                        "/js/**",
-                        "/images/**"
-                ).permitAll()
+                                "/api/v1/auth/register",
+                                "/api/v1/auth/login",
+                                "/api/v1/auth/verify-otp",
+                                "/api/v1/auth/resend-otp",
+                                "/api/v1/auth/refresh-token",
+                                "/api/v1/auth/forgot-password",
+                                "/api/v1/auth/reset-password",
+                                "/api/v1/auth/verify-email",
+                                "/api/v1/auth/resend-verification",
+                                "/api/v1/contact",
 
-                .requestMatchers(
-                        "/api/v1/auth/change-password",
-                        "/api/v1/auth/logout"
-                ).authenticated()
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/v3/api-docs/**",
 
-                .anyRequest().authenticated()
+                                "/",
+                                "/css/**",
+                                "/js/**",
+                                "/images/**",
+                                "/uploads/**",
+                                "/ws/**",
+
+                                // OAuth2
+                                "/oauth2/**",
+                                "/login/oauth2/**"
+                        )
+                        .permitAll()
+
+                        .requestMatchers(
+                                "/api/v1/auth/change-password",
+                                "/api/v1/auth/logout"
+                        )
+                        .authenticated()
+
+                        .anyRequest()
+                        .authenticated()
                 )
 
                 .authenticationProvider(
@@ -96,7 +127,14 @@ public class SecurityConfig{
 
                 .httpBasic(httpBasic -> httpBasic.disable())
 
-                .formLogin(form -> form.disable());
+                .formLogin(form -> form.disable())
+
+                // OAuth2 Login
+                .oauth2Login(oauth2 -> oauth2
+                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+                        .successHandler(oAuth2LoginSuccessHandler)
+                        .failureUrl("/oauth2/failure")
+                );
 
         return http.build();
     }
@@ -126,20 +164,42 @@ public class SecurityConfig{
 
         return configuration.getAuthenticationManager();
     }
+
     @Bean
-        public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration config = new CorsConfiguration();
+
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
-        config.setAllowedHeaders(List.of("*"));
+
+        // ✅ FIXED: was hardcoded to List.of("http://localhost:5173")
+        config.setAllowedOrigins(
+                Arrays.asList(allowedOrigins.split(","))
+        );
+
+        config.setAllowedHeaders(
+                List.of("*")
+        );
+
         config.setAllowedMethods(
-                List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")
+                List.of(
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "DELETE",
+                        "PATCH",
+                        "OPTIONS"
+                )
         );
 
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+
+        source.registerCorsConfiguration(
+                "/**",
+                config
+        );
 
         return source;
-        }
+    }
 }
